[CHG] Modify package.json

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "pnpm": {
     "ignoredBuiltDependencies": [
-      "bcrypt",
-      "sharp"
+      // "bcrypt",
+      // "sharp"
     ]
   }
 }
